--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 }
 
 .topbar{
-position: sticky;
+position:sticky;
 top: 0px;
 z-index: 49;
 }
@@ -68,6 +68,8 @@ z-index: 49;
     background-color: #2584f8;
     box-shadow: 0 0 0 0 rgba(178, 212, 252, 0.7);
   }
+
+
 }
 
 @layer base {
@@ -237,3 +239,12 @@ z-index: 49;
     transform: rotate(360deg);
   }
 }
+.blink {
+  animation: blinker 3s linear infinite;
+}
+
+@keyframes blinker {  
+  50% { opacity: 0; }
+}
+
+
