--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ top: 0px;
 z-index: 49;
 }
 
-.mentions-input {
+/* .mentions-input {
   width: 100%;
   border-radius: 999px;
   padding: 1.25rem 1rem;
@@ -39,7 +39,7 @@ z-index: 49;
 
 .mentions-input__suggestions__item--focused {
   background-color: #f0f4f8;
-}
+} */
 
 .dots-container {
   display: flex;
